# besui

./: .env  .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  docker-compose.yml  env.example
configuration/: base.toml  chains.json  custom_rpc.json  local.toml
crates/besui-api/: Cargo.toml
crates/besui-api/src/: lib.rs  router.rs  tokens.rs  utils.rs
crates/besui-cli/: Cargo.toml
crates/besui-cli/src/: lib.rs  main.rs  nft.rs  server.rs
crates/besui-config/: Cargo.toml
crates/besui-config/src/: chains.rs  config.rs  lib.rs
crates/besui-core/: Cargo.toml
crates/besui-core/entity/: Cargo.toml
crates/besui-core/entity/src/: exchange.rs  mod.rs  prelude.rs  token.rs
crates/besui-core/migration/: Cargo.toml
crates/besui-core/migration/src/: lib.rs  m20221021_190148_create_token_table.rs  m20221108_140052_create_table_exchange.rs
crates/besui-core/src/: core.rs  database.rs  errors.rs  lib.rs  persistence.rs  resolver.rs  services.rs
crates/besui-core/src/application/: mod.rs
crates/besui-core/src/application/fetcher/: exchange_fetcher.rs  mod.rs  token_fetcher.rs
crates/besui-core/src/application/monitor/: exchange_monitor.rs  mod.rs  token_monitor.rs
crates/besui-core/src/application/store/: exchange.rs  mod.rs  token.rs
crates/besui-core/src/core/: chain.rs
crates/besui-core/src/domain/: mod.rs
crates/besui-core/src/domain/exchange/: mod.rs  model.rs  services.rs  store.rs
crates/besui-core/src/domain/token/: filter.rs  mod.rs  model.rs  service.rs  store.rs
crates/besui-core/src/domain/token/model/: mod.rs
crates/besui-core/src/persistence/: postgres.rs
crates/besui-core/src/services/: exchange_fetcher.rs  mod.rs  service_register.rs  token_fetcher.rs
crates/besui-core/src/services/exchange/: fetcher.rs  mod.rs  service.rs  store.rs
crates/besui-core/src/services/token/: fetcher.rs  mod.rs  service.rs  store.rs
crates/besui-core/src/utils/: mod.rs
crates/besui-core/src/utils/coingecko/: converter.rs  dto.rs  filter.rs  mod.rs
crates/besui-types/: Cargo.toml
crates/besui-types/src/: lib.rs
crates/besui-utils/: Cargo.toml
crates/besui-utils/src/: file.rs
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  token.rs
migration/src/: lib.rs  m20221021_190148_create_token_table.rs
src/: errors.rs  lib.rs  main.rs
src/cli/: mod.rs
src/common/: chain.rs  coingecko.rs  constants.rs  mod.rs  output.rs  provider.rs  types.rs
src/config/: default.toml  mod.rs
src/core/: mod.rs
src/database/: mod.rs
src/fetcher/: mod.rs  types.rs
src/server/: http_server.rs
src/token/: mod.rs
src/watcher/: mod.rs  on_chain.rs
