[package]
name = "besui-core"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[dependencies]
besui-types = { path = "../besui-types"}
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
anyhow = "1.0.61"
thiserror = "1.0.32"
serde = "1.0.147"
sea-orm = { version = "0.10.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
auto_impl = "1.0.1"
getset = "0.1.2"
async-trait = "0.1.57"
derive_more = "0.99.17"