[package]
name = "besui-core"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
besui-types = { path = "../besui-types"}
besui-config = { path = "../besui-config"}
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
anyhow = "1.0.61"
thiserror = "1.0.32"
serde = "1.0.147"
sea-orm = { version = "0.10.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
auto_impl = "1.0.1"
getset = "0.1.2"
async-trait = "0.1.57"
derive_more = "0.99.17"
coingecko = "1.0.1"
claims = "0.7"
derive_builder = "0.11.2"
chrono = "0.4.22"
prettytable-rs = "^0.9"
cached = "0.40.0"
futures = "0.3.25"
once_cell = "1.16.0"
tokio-retry = "0.3.0"

[dev-dependencies]
sea-orm = { version = "0.10.1", features = ["mock"] }
mockall = "0.11.1"


[features]
db-mock = ["sea-orm/mock"]